--- a/.github/workflows/create-release-pr.yml
+++ b/.github/workflows/create-release-pr.yml
@@ -61,13 +61,20 @@ jobs:
             echo "has_changes=false" >> "$GITHUB_OUTPUT"
           fi
 
+      - name: Get last tag for range
+        if: steps.check_changes.outputs.has_changes == 'true'
+        id: last_tag
+        run: |
+          LAST_TAG=$(git describe --tags --abbrev=0 2>/dev/null || echo "")
+          echo "tag=$LAST_TAG" >> "$GITHUB_OUTPUT"
+
       - name: Generate release notes with git-cliff
         if: steps.check_changes.outputs.has_changes == 'true'
         uses: orhun/git-cliff-action@v4
         id: cliff
         with:
           config: cliff.toml
-          args: --unreleased --strip header
+          args: ${{ steps.last_tag.outputs.tag && format('{0}..HEAD', steps.last_tag.outputs.tag) || '--unreleased' }} --strip header
         env:
           OUTPUT: RELEASE_NOTES.md
         continue-on-error: true
