--- a/cliff.toml
+++ b/cliff.toml
@@ -70,6 +70,7 @@ commit_parsers = [
     { message = "^fix\\(ci\\)", skip = true },
     { message = "^fix", group = "2-🐛 Bug Fixes", default_scope = "general" },
     { message = "^perf", group = "3-⚡ Performance", default_scope = "general" },
+    { message = "^refactor\\(ci\\)", skip = true },
     { message = "^refactor", group = "4-♻️ Refactoring", default_scope = "general" },
     { message = "^doc", group = "Documentation", skip = true },
     { message = "^style", group = "Style", skip = true },
