--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -48,7 +48,9 @@ services:
       MYSQL_IMAGE: ${MYSQL_IMAGE}
     volumes:
       - mysql_data:/var/lib/mysql
-      - ../sql/pdns/${PDNS_BRANCH}/schema.mysql.sql:/docker-entrypoint-initdb.d/init.sql
+      - ../sql/pdns/${PDNS_BRANCH}/schema.mysql.sql:/docker-entrypoint-initdb.d/01-pdns.sql
+      - ../sql/poweradmin-mysql-db-structure.sql:/docker-entrypoint-initdb.d/poweradmin-schema.sql
+      - ./scripts/init-poweradmin-db.sh:/docker-entrypoint-initdb.d/02-init-poweradmin.sh
       - ./scripts/custom-healthcheck.sh:/custom-healthcheck.sh
     ports:
       - "3306:3306"
@@ -71,7 +73,8 @@ services:
       POSTGRES_PASSWORD: ${DB_PASSWORD}
     volumes:
       - pgsql_data:/var/lib/postgresql/data
-      - ../sql/pdns/${PDNS_BRANCH}/schema.pgsql.sql:/docker-entrypoint-initdb.d/init.sql
+      - ../sql/pdns/${PDNS_BRANCH}/schema.pgsql.sql:/docker-entrypoint-initdb.d/01-pdns.sql
+      - ../sql/poweradmin-pgsql-db-structure.sql:/docker-entrypoint-initdb.d/02-poweradmin.sql
     ports:
       - "5432:5432"
     healthcheck:
