--- a/package.json
+++ b/package.json
@@ -9,7 +9,15 @@
   },
   "scripts": {
     "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "cypress:run": "cypress run",
+    "test:e2e": "cypress run",
+    "test:e2e:ui": "cypress open",
+    "test:e2e:headed": "cypress run --headed",
+    "test:e2e:debug": "cypress open --e2e --browser chrome",
+    "test:e2e:chromium": "cypress run --browser chrome",
+    "test:e2e:firefox": "cypress run --browser firefox",
+    "test:e2e:webkit": "cypress run --browser webkit",
+    "test:e2e:report": "cypress run --reporter spec"
   },
   "keywords": [],
   "author": "",
