--- a/.gitignore
+++ b/.gitignore
@@ -44,6 +44,11 @@ npm-debug.log*
 cypress/videos
 cypress/screenshots
 
+# Playwright
+playwright-report/
+test-results/
+playwright/.cache/
+
 # PHP tools
 .php-cs-fixer.cache
 
