--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "tests"
   },
   "scripts": {
-    "test:e2e": "playwright test",
+    "test:e2e": "playwright test --project=chromium",
+    "test:e2e:all": "playwright test",
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:debug": "playwright test --debug",
