chore(e2e): add chunked test scripts and improve test stability

--- a/package.json
+++ b/package.json
@@ -16,7 +16,25 @@
     "test:e2e:chromium": "playwright test --project=chromium",
     "test:e2e:firefox": "playwright test --project=firefox",
     "test:e2e:webkit": "playwright test --project=webkit",
-    "test:e2e:report": "playwright show-report"
+    "test:e2e:report": "playwright show-report",
+    "test:e2e:api": "playwright test playwright/tests/api --project=chromium",
+    "test:e2e:auth": "playwright test playwright/tests/login playwright/tests/password playwright/tests/mfa --project=chromium",
+    "test:e2e:bulk": "playwright test playwright/tests/bulk-operations --project=chromium",
+    "test:e2e:dashboard": "playwright test playwright/tests/dashboard --project=chromium",
+    "test:e2e:dnssec": "playwright test playwright/tests/dnssec --project=chromium",
+    "test:e2e:integration": "playwright test playwright/tests/integration --project=chromium",
+    "test:e2e:layout": "playwright test playwright/tests/layout playwright/tests/navigation --project=chromium",
+    "test:e2e:logs": "playwright test playwright/tests/logs --project=chromium",
+    "test:e2e:permissions": "playwright test playwright/tests/permissions --project=chromium",
+    "test:e2e:records": "playwright test playwright/tests/records --project=chromium",
+    "test:e2e:search": "playwright test playwright/tests/search --project=chromium",
+    "test:e2e:supermaster": "playwright test playwright/tests/supermaster --project=chromium",
+    "test:e2e:templates": "playwright test playwright/tests/templates --project=chromium",
+    "test:e2e:users": "playwright test playwright/tests/users --project=chromium",
+    "test:e2e:utilities": "playwright test playwright/tests/utilities --project=chromium",
+    "test:e2e:workflows": "playwright test playwright/tests/workflows --project=chromium",
+    "test:e2e:zones": "playwright test playwright/tests/zones --project=chromium",
+    "test:e2e:edge-cases": "playwright test playwright/tests/corner-cases --project=chromium"
   },
   "keywords": [],
   "author": "",
