chore(e2e): remove tests for features not available in 3.x branch

--- a/package.json
+++ b/package.json
@@ -17,8 +17,7 @@
     "test:e2e:firefox": "playwright test --project=firefox",
     "test:e2e:webkit": "playwright test --project=webkit",
     "test:e2e:report": "playwright show-report",
-    "test:e2e:api": "playwright test playwright/tests/api --project=chromium",
-    "test:e2e:auth": "playwright test playwright/tests/login playwright/tests/password playwright/tests/mfa --project=chromium",
+    "test:e2e:auth": "playwright test playwright/tests/login playwright/tests/password --project=chromium",
     "test:e2e:bulk": "playwright test playwright/tests/bulk-operations --project=chromium",
     "test:e2e:dashboard": "playwright test playwright/tests/dashboard --project=chromium",
     "test:e2e:dnssec": "playwright test playwright/tests/dnssec --project=chromium",
