chore(devcontainer): configure parallel database environments with DNSSEC

--- a/.devcontainer/conf/pdns-pgsql.conf
+++ b/.devcontainer/conf/pdns-pgsql.conf
@@ -5,14 +5,13 @@ gpgsql-user=pdns
 gpgsql-password=poweradmin
 gpgsql-dbname=pdns
 gpgsql-dnssec=yes
-gpgsql-extra-connection-parameters=options='-c search_path=pdns'
 
 webserver=yes
 webserver-address=0.0.0.0
 webserver-port=8081
-webserver-allow-from=172.18.0.0/16,172.22.0.0/16,192.168.0.0/16,127.0.0.1,::1
+webserver-allow-from=0.0.0.0/0,::/0
 
 api=yes
 api-key=fxiBmBFx7MITw5ECRMOr10ghlxGMvWZA
 
-default-soa-content=ns-1.@ admin.@ 0 10800 3600 604800 3600
+default-soa-content=ns1.example.com admin.example.com 0 10800 3600 604800 3600
