--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,19 +1,36 @@
 {
-  "name": "Poweradmin",
+  "name": "Poweradmin Multi-DB",
   "dockerComposeFile": "docker-compose.yml",
-  "service": "app",
+  "service": "app-pgsql",
   "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
   "forwardPorts": [
-    "app:9000",
+    "web-mysql:8080",
+    "web-pgsql:8081",
+    "web-sqlite:8082",
     "mysql:3306",
     "pgsql:5432",
     "adminer:8090",
-    "dns:1053",
-    "dns:8081"
+    "pdns-mysql:1053",
+    "pdns-mysql:8181",
+    "pdns-pgsql:1054",
+    "pdns-pgsql:8182",
+    "pdns-sqlite:1055",
+    "pdns-sqlite:8183",
+    "ldap:389",
+    "ldapadmin:8443"
   ],
   "portsAttributes": {
-    "app:9000": {
-      "label": "Poweradmin"
+    "web-mysql:8080": {
+      "label": "Poweradmin (MySQL)",
+      "onAutoForward": "notify"
+    },
+    "web-pgsql:8081": {
+      "label": "Poweradmin (PostgreSQL)",
+      "onAutoForward": "notify"
+    },
+    "web-sqlite:8082": {
+      "label": "Poweradmin (SQLite)",
+      "onAutoForward": "notify"
     },
     "mysql:3306": {
       "label": "MariaDB"
@@ -24,11 +41,29 @@
     "adminer:8090": {
       "label": "Adminer"
     },
-    "dns:1053": {
-      "label": "PowerDNS"
+    "pdns-mysql:1053": {
+      "label": "PowerDNS MySQL (DNS)"
     },
-    "dns:8081": {
-      "label": "PowerDNS API"
+    "pdns-mysql:8181": {
+      "label": "PowerDNS MySQL (API)"
+    },
+    "pdns-pgsql:1054": {
+      "label": "PowerDNS PostgreSQL (DNS)"
+    },
+    "pdns-pgsql:8182": {
+      "label": "PowerDNS PostgreSQL (API)"
+    },
+    "pdns-sqlite:1055": {
+      "label": "PowerDNS SQLite (DNS)"
+    },
+    "pdns-sqlite:8183": {
+      "label": "PowerDNS SQLite (API)"
+    },
+    "ldap:389": {
+      "label": "LDAP"
+    },
+    "ldapadmin:8443": {
+      "label": "phpLDAPadmin"
     }
   }
 }
