chore(e2e): simplify test scripts with database-specific commands

--- a/package.json
+++ b/package.json
@@ -13,27 +13,10 @@
     "test:e2e:ui": "playwright test --ui",
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:debug": "playwright test --debug",
-    "test:e2e:chromium": "playwright test --project=chromium",
-    "test:e2e:firefox": "playwright test --project=firefox",
-    "test:e2e:webkit": "playwright test --project=webkit",
     "test:e2e:report": "playwright show-report",
-    "test:e2e:auth": "playwright test playwright/tests/login playwright/tests/password --project=chromium",
-    "test:e2e:bulk": "playwright test playwright/tests/bulk-operations --project=chromium",
-    "test:e2e:dashboard": "playwright test playwright/tests/dashboard --project=chromium",
-    "test:e2e:dnssec": "playwright test playwright/tests/dnssec --project=chromium",
-    "test:e2e:integration": "playwright test playwright/tests/integration --project=chromium",
-    "test:e2e:layout": "playwright test playwright/tests/layout playwright/tests/navigation --project=chromium",
-    "test:e2e:logs": "playwright test playwright/tests/logs --project=chromium",
-    "test:e2e:permissions": "playwright test playwright/tests/permissions --project=chromium",
-    "test:e2e:records": "playwright test playwright/tests/records --project=chromium",
-    "test:e2e:search": "playwright test playwright/tests/search --project=chromium",
-    "test:e2e:supermaster": "playwright test playwright/tests/supermaster --project=chromium",
-    "test:e2e:templates": "playwright test playwright/tests/templates --project=chromium",
-    "test:e2e:users": "playwright test playwright/tests/users --project=chromium",
-    "test:e2e:utilities": "playwright test playwright/tests/utilities --project=chromium",
-    "test:e2e:workflows": "playwright test playwright/tests/workflows --project=chromium",
-    "test:e2e:zones": "playwright test playwright/tests/zones --project=chromium",
-    "test:e2e:edge-cases": "playwright test playwright/tests/corner-cases --project=chromium"
+    "test:e2e:mysql": "BASE_URL=http://localhost:8080 playwright test --project=chromium",
+    "test:e2e:pgsql": "BASE_URL=http://localhost:8081 playwright test --project=chromium",
+    "test:e2e:sqlite": "BASE_URL=http://localhost:8082 playwright test --project=chromium"
   },
   "keywords": [],
   "author": "",
