--- a/.devcontainer/conf/nginx.conf
+++ b/.devcontainer/conf/nginx.conf
@@ -32,7 +32,7 @@ server {
 
     # Handle PHP files
     location ~ \.php$ {
-        fastcgi_pass app:9000;
+        fastcgi_pass app-mysql:9000;
         fastcgi_index index.php;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_read_timeout 180;
