--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,21 +1,36 @@
 {
-  "name": "Poweradmin",
+  "name": "Poweradmin Multi-DB",
   "dockerComposeFile": "docker-compose.yml",
-  "service": "app",
+  "service": "app-mysql",
   "workspaceFolder": "/workspaces/${localWorkspaceFolderBasename}",
   "forwardPorts": [
-    "app:9000",
+    "webserver:8080",
+    "apache:8081",
+    "caddy:8082",
     "mysql:3306",
     "pgsql:5432",
-    "keycloak:8080",
     "adminer:8090",
-    "dns:1053",
-    "dns:8081",
+    "pdns-mysql:1053",
+    "pdns-mysql:8181",
+    "pdns-pgsql:1054",
+    "pdns-pgsql:8182",
+    "pdns-sqlite:1055",
+    "pdns-sqlite:8183",
+    "ldap:389",
     "ldapadmin:8443"
   ],
   "portsAttributes": {
-    "app:9000": {
-      "label": "Poweradmin"
+    "webserver:8080": {
+      "label": "Poweradmin (MySQL)",
+      "onAutoForward": "notify"
+    },
+    "apache:8081": {
+      "label": "Poweradmin (PostgreSQL)",
+      "onAutoForward": "notify"
+    },
+    "caddy:8082": {
+      "label": "Poweradmin (SQLite)",
+      "onAutoForward": "notify"
     },
     "mysql:3306": {
       "label": "MariaDB"
@@ -23,20 +38,32 @@
     "pgsql:5432": {
       "label": "PostgreSQL"
     },
-    "keycloak:8080": {
-      "label": "Keycloak"
-    },
     "adminer:8090": {
       "label": "Adminer"
     },
-    "dns:1053": {
-      "label": "PowerDNS"
+    "pdns-mysql:1053": {
+      "label": "PowerDNS MySQL (DNS)"
     },
-    "dns:8081": {
-      "label": "PowerDNS API"
+    "pdns-mysql:8181": {
+      "label": "PowerDNS MySQL (API)"
+    },
+    "pdns-pgsql:1054": {
+      "label": "PowerDNS PostgreSQL (DNS)"
+    },
+    "pdns-pgsql:8182": {
+      "label": "PowerDNS PostgreSQL (API)"
+    },
+    "pdns-sqlite:1055": {
+      "label": "PowerDNS SQLite (DNS)"
+    },
+    "pdns-sqlite:8183": {
+      "label": "PowerDNS SQLite (API)"
+    },
+    "ldap:389": {
+      "label": "LDAP"
     },
     "ldapadmin:8443": {
-      "label": "LDAP Admin"
+      "label": "phpLDAPadmin"
     }
   },
   "postStartCommand": "bash .devcontainer/ldap/setup-ldap-test.sh"
