--- a/.devcontainer/docker-compose.yml
+++ b/.devcontainer/docker-compose.yml
@@ -1,6 +1,33 @@
 services:
-  app:
-    container_name: poweradmin
+  # =============================================================================
+  # PHP-FPM Application Containers
+  # =============================================================================
+
+  # PHP-FPM for MySQL (used by nginx)
+  app-mysql:
+    container_name: poweradmin-mysql
+    build:
+      context: .
+      dockerfile: Dockerfile
+      args:
+        - VARIANT=${PHP_VERSION}-fpm-${DEBIAN_VERSION}
+    volumes:
+      - ../.:/app
+      - ./conf/xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+      - ./conf/error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
+      - ../..:/workspaces:cached
+      - ./conf/settings-mysql.php:/app/config/settings.php
+    networks:
+      - internal
+    environment:
+      - PHP_IDE_CONFIG=serverName=localhost
+    depends_on:
+      mysql:
+        condition: service_healthy
+
+  # PHP-FPM for SQLite (used by caddy)
+  app-sqlite:
+    container_name: poweradmin-sqlite
     build:
       context: .
       dockerfile: Dockerfile
@@ -12,20 +39,22 @@ services:
       - ./conf/error_reporting.ini:/usr/local/etc/php/conf.d/error_reporting.ini
       - ../..:/workspaces:cached
       - sqlite_data:/data
+      - ./conf/settings-sqlite.php:/app/config/settings.php
     networks:
       - internal
-    ports:
-      - "9000:9000"
     environment:
       - PHP_IDE_CONFIG=serverName=localhost
     depends_on:
-      - mysql
-      - pgsql
       - sqlite
 
+  # =============================================================================
+  # Web Servers
+  # =============================================================================
+
+  # Nginx webserver (MySQL) - Port 8080
   webserver:
     image: nginx:latest
-    container_name: webserver
+    container_name: web-mysql
     networks:
       - internal
     ports:
@@ -33,9 +62,48 @@ services:
     volumes:
       - ./conf/nginx.conf:/etc/nginx/conf.d/default.conf
       - ../.:/app
-      - sqlite_data:/data
+      - ./conf/settings-mysql.php:/app/config/settings.php
     depends_on:
-      - app
+      - app-mysql
+
+  # Apache webserver (PostgreSQL) - Port 8081
+  apache:
+    build:
+      context: .
+      dockerfile: apache.Dockerfile
+    container_name: web-pgsql
+    networks:
+      - internal
+    ports:
+      - "8081:80"
+    volumes:
+      - ../.:/app
+      - ./conf/settings-pgsql.php:/app/config/settings.php
+    depends_on:
+      pgsql:
+        condition: service_healthy
+
+  # Caddy webserver (SQLite) - Port 8082
+  caddy:
+    image: caddy:2-alpine
+    container_name: web-sqlite
+    networks:
+      - internal
+    ports:
+      - "8082:80"
+    volumes:
+      - ./conf/Caddyfile:/etc/caddy/Caddyfile
+      - ../.:/app
+      - sqlite_data:/data
+      - caddy_data:/data/caddy
+      - caddy_config:/config/caddy
+      - ./conf/settings-sqlite.php:/app/config/settings.php
+    depends_on:
+      - app-sqlite
+
+  # =============================================================================
+  # Database Servers
+  # =============================================================================
 
   mysql:
     image: ${MYSQL_IMAGE}:${MYSQL_VERSION}
@@ -87,13 +155,68 @@ services:
     image: keinos/sqlite3
     container_name: sqlite
     user: "0:0"
+    networks:
+      - internal
     volumes:
       - sqlite_data:/data
-      - ../sql/pdns/47/schema.sqlite3.sql:/schema.sqlite3.sql
+      - ../sql/pdns/${PDNS_BRANCH}/schema.sqlite3.sql:/schema.sqlite3.sql
       - ./scripts/create-sqlite-db.sh:/init-db.sh
-    command: ["/bin/sh", "-c", "/init-db.sh && sqlite3"]
+    command: ["/bin/sh", "-c", "/init-db.sh && tail -f /dev/null"]
     stdin_open: true
     tty: true
+
+  # =============================================================================
+  # PowerDNS Servers (one per database type - all with DNSSEC enabled)
+  # =============================================================================
+
+  pdns-mysql:
+    image: powerdns/pdns-auth-${PDNS_BRANCH}:${PDNS_VERSION}
+    container_name: pdns-mysql
+    networks:
+      - internal
+    volumes:
+      - ./conf/pdns-mysql.conf:/etc/powerdns/pdns.conf
+    ports:
+      - "1053:53"
+      - "1053:53/udp"
+      - "8181:8081"
+    depends_on:
+      mysql:
+        condition: service_healthy
+
+  pdns-pgsql:
+    image: powerdns/pdns-auth-${PDNS_BRANCH}:${PDNS_VERSION}
+    container_name: pdns-pgsql
+    networks:
+      - internal
+    volumes:
+      - ./conf/pdns-pgsql.conf:/etc/powerdns/pdns.conf
+    ports:
+      - "1054:53"
+      - "1054:53/udp"
+      - "8182:8081"
+    depends_on:
+      pgsql:
+        condition: service_healthy
+
+  pdns-sqlite:
+    image: powerdns/pdns-auth-${PDNS_BRANCH}:${PDNS_VERSION}
+    container_name: pdns-sqlite
+    networks:
+      - internal
+    volumes:
+      - ./conf/pdns-sqlite.conf:/etc/powerdns/pdns.conf
+      - sqlite_data:/data
+    ports:
+      - "1055:53"
+      - "1055:53/udp"
+      - "8183:8081"
+    depends_on:
+      - sqlite
+
+  # =============================================================================
+  # Admin Tools
+  # =============================================================================
 
   adminer:
     image: adminer
@@ -106,32 +229,9 @@ services:
       - sqlite_data:/data
       - ./adminer/login-password-less.php:/var/www/html/plugins-enabled/login-password-less.php
 
-  apache:
-    build:
-      context: .
-      dockerfile: apache.Dockerfile
-    container_name: apache
-    networks:
-      - internal
-    ports:
-      - "8888:80"
-    volumes:
-      - ../.:/app
-      - sqlite_data:/data
-    depends_on:
-      - app
-
-#  ldap:
-#    image: dinkel/openldap
-#    container_name: ldap
-#    networks:
-#      - internal
-#    environment:
-#      - SLAPD_PASSWORD=poweradmin
-#      - SLAPD_DOMAIN=poweradmin.org
-#      - SLAPD_ADDITIONAL_MODULES=memberof
-#    ports:
-#      - 389:389
+  # =============================================================================
+  # LDAP Server (for LDAP authentication testing)
+  # =============================================================================
 
   ldap:
     image: osixia/openldap:1.5.0
@@ -143,9 +243,17 @@ services:
       - LDAP_DOMAIN=poweradmin.org
       - "LDAP_BASE_DN=dc=poweradmin,dc=org"
       - LDAP_ADMIN_PASSWORD=poweradmin
+    volumes:
+      - ./ldap/ldap-test-user.ldif:/ldap-test-user.ldif:ro
     ports:
       - 389:389
       - 636:636
+    healthcheck:
+      test: ["CMD-SHELL", "ldapsearch -x -H ldap://localhost -b dc=poweradmin,dc=org -D 'cn=admin,dc=poweradmin,dc=org' -w poweradmin"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
 
   ldapadmin:
     image: osixia/phpldapadmin:0.9.0
@@ -157,25 +265,12 @@ services:
     ports:
       - 8443:443
 
-  dns:
-    image: powerdns/pdns-auth-${PDNS_BRANCH}:${PDNS_VERSION}
-    container_name: powerdns
-    networks:
-      - internal
-    volumes:
-      - ./conf/pdns.conf:/etc/powerdns/pdns.conf
-    ports:
-      - "1053:53"
-      - "1053:53/udp"
-      - "8081:8081"
-    depends_on:
-      mysql:
-        condition: service_healthy
-
 volumes:
   mysql_data: { }
   pgsql_data: { }
   sqlite_data: {}
+  caddy_data: {}
+  caddy_config: {}
 
 networks:
   internal:
