--- a/package.json
+++ b/package.json
@@ -8,14 +8,21 @@
     "test": "tests"
   },
   "scripts": {
-    "cypress:open": "cypress open",
-    "cypress:run": "cypress run"
+    "test:e2e": "playwright test --project=chromium",
+    "test:e2e:all": "playwright test",
+    "test:e2e:ui": "playwright test --ui",
+    "test:e2e:headed": "playwright test --headed",
+    "test:e2e:debug": "playwright test --debug",
+    "test:e2e:report": "playwright show-report",
+    "test:e2e:mysql": "BASE_URL=http://localhost:8080 playwright test --project=chromium",
+    "test:e2e:pgsql": "BASE_URL=http://localhost:8081 playwright test --project=chromium",
+    "test:e2e:sqlite": "BASE_URL=http://localhost:8082 playwright test --project=chromium"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "cypress": "^15.0.0"
+    "@playwright/test": "^1.57.0"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
